# wagtail-spa-integration

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  data.json  docker-compose.yml  pyproject.toml  renovate.json  requirements.txt  setup.py  tox.ini
sandbox/: api.py  models.py  test_views.py  urls.py  wsgi.py
sandbox/migrations/: 0001_initial.py  0002_barpage.py
sandbox/settings/: base.py  dev.py  production.py
src/wagtail_spa_integration/: headless_preview_api.py  serializers.py  tests.py  utils.py  views.py
wagtail_spa_integration/: __init__.py  apps.py  filters.py  headless_preview_api.py  serializers.py  tests.py  utils.py  views.py
wagtail_spa_integration/templates/wagtailadmin/pages/: _preview_button_on_edit.html
wagtail_spa_integration/templatetags/: wagtail_spa_integration_tags.py
